unpackaged/main/default/objects/CMPL123__WF_Action__c/CMPL123__WF_Action__c.object-meta.xml
<CustomObject>
    <description>Workflow Actions</description>
    <label>Workflow Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Actions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>