unpackaged/main/default/objects/CMPL123__WF_Action__c/fields/CMPL123__Comment_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Comment_Type__c</fullName>
        <label>Comment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Dropdown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>