unpackaged/main/default/objects/CMPL123__WF_Action__c/fields/CMPL123__Esign_Message__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Esign_Message__c</fullName>
        <description>E-signature Message</description>
        <inlineHelpText>E-signature Message</inlineHelpText>
        <label>E-Sign Message</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>