unpackaged/main/default/objects/CMPL123__WF_Action__c/fields/CMPL123__Generic_Comment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Generic_Comment__c</fullName>
        <inlineHelpText>Specify comments separated with , or new line</inlineHelpText>
        <label>Generic Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>