unpackaged/main/default/objects/CMPL123__WF_Action__c/fields/CMPL123__Is_Comment_Required__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Comment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Comment Required</description>
        <inlineHelpText>Check if comment is required</inlineHelpText>
        <label>Is Comment Required?</label>
        <type>Checkbox</type>
    </CustomField>