unpackaged/main/default/objects/CMPL123__WF_Action__c/fields/CMPL123__Is_ESign_Required__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_ESign_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is E-Sign Required</description>
        <inlineHelpText>Check if e-sign is required</inlineHelpText>
        <label>Is E-Sign Required?</label>
        <type>Checkbox</type>
    </CustomField>