unpackaged/main/default/objects/CMPL123__WF_Action__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Comment_Type__c</columns>
        <columns>CMPL123__Description__c</columns>
        <columns>CMPL123__Esign_Message__c</columns>
        <columns>CMPL123__Generic_Comment__c</columns>
        <columns>CMPL123__Is_Comment_Required__c</columns>
        <columns>CMPL123__Is_ESign_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>